Fixes for topjava classes and fix hibernate jackson
- renamed REST_URL constants, changes created url for register method
- add jackson-hibernate config
- removed hidden id in swagger for entities
- removed my Profile class

--- a/topjava-graduation/pom.xml
+++ b/topjava-graduation/pom.xml
@@ -47,6 +47,12 @@
             <artifactId>micrometer-tracing-bridge-brave</artifactId>
         </dependency>
 
+        <!--        jackson-->
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-hibernate5-jakarta</artifactId>
+        </dependency>
+
         <!--Swagger-->
         <dependency>
             <groupId>org.springdoc</groupId>
